# Netology_CPP_HW

./: README.md
Algo HW1/Algo HW1-1/: Домашнее задание Algo HW1-2 решение.md
Algo HW1/Algo HW1-2/: Algo HW1-2.cpp  Algo HW1-2.sln  Algo HW1-2.vcxproj  Algo HW1-2.vcxproj.filters
Algo HW2/Algo HW2-1/: Algo HW2-1.cpp  Algo HW2-1.sln  Algo HW2-1.vcxproj  Algo HW2-1.vcxproj.filters
Algo HW2/Algo HW2-2/: Algo HW2-2.cpp  Algo HW2-2.sln  Algo HW2-2.vcxproj  Algo HW2-2.vcxproj.filters
Algo HW3/: Algo HW3.cpp  Algo HW3.sln  Algo HW3.vcxproj  Algo HW3.vcxproj.filters
Algo HW4/Algo HW4-1/: Algo HW4-1.cpp  Algo HW4-1.sln  Algo HW4-1.vcxproj  Algo HW4-1.vcxproj.filters
Algo HW4/Algo HW4-2/: Algo HW4-2.cpp  Algo HW4-2.sln  Algo HW4-2.vcxproj  Algo HW4-2.vcxproj.filters
Algo HW4/Algo HW4-3/: Algo HW4-3.cpp  Algo HW4-3.sln  Algo HW4-3.vcxproj  Algo HW4-3.vcxproj.filters
Algo HW5/AlgoHW5-1/: AlgoHW5-1.cpp  AlgoHW5-1.sln  AlgoHW5-1.vcxproj  AlgoHW5-1.vcxproj.filters
Algo HW5/AlgoHW5-2/: AlgoHW5-2.cpp  AlgoHW5-2.sln  AlgoHW5-2.vcxproj  AlgoHW5-2.vcxproj.filters
Algo HW6/AlgoHW6-1/: AlgoHW6-1.cpp  AlgoHW6-1.sln  AlgoHW6-1.vcxproj  AlgoHW6-1.vcxproj.filters
Algo HW6/AlgoHW6-2/: AlgoHW6-2.cpp  AlgoHW6-2.sln  AlgoHW6-2.vcxproj  AlgoHW6-2.vcxproj.filters
DataBase/: CREATE.sql  Diagram HW1.drawio  HW02-2.sql  HW04-1-2.sql  HW04-1-3.sql  HW04-1-4.sql  HW04-1-5.sql  HW04-1-6.sql  HW04-1-7.sql  HW04-1-8.sql  HW04-1.sql  SELECT.sql
DynamicArrays/: DynamicArrays.cpp  DynamicArrays.sln  DynamicArrays.vcxproj  DynamicArrays.vcxproj.filters
DynamicArraysTwoSize/: DynamicArraysTwoSize.cpp  DynamicArraysTwoSize.sln  DynamicArraysTwoSize.vcxproj  DynamicArraysTwoSize.vcxproj.filters
HW10/2/HW10-2/: CMakeLists.txt
HW10/2/HW10-2/main/: HW10-2.cpp
HW10/2/HW10-2/sources/: Figure.cpp  Parallelogram.cpp  RectTriangle.cpp  Rhomb.cpp
HW11/1/Greet_client/: CMakeLists.txt  Greet_client.cpp
HW11/1/Greet_client/Greeter_lib_static/: CMakeLists.txt  Greeter.cpp  Greeter.h
HW11/2/Leaver_client/Leaver_lib_dynamic/: CMakeLists.txt  Leaver.cpp
HW11/3/Leaver_client/: CMakeLists.txt
HW11/3/Leaver_client/Leaver_lib_dynamic/: CMakeLists.txt  Leaver.h
HW11/5/HW11-5/: CMakeLists.txt  HW11-5.cpp
HW11/5/HW11-5/FIGURE_DLL/: CMakeLists.txt  EquTriangle.cpp  Rectangle.cpp  Rectangle.h  Rhomb.h  Square.cpp  Square.h  Triangle.h
KURS AIRPORT INSPECTOR/: .gitignore  CheckList.xlsx  Инспектор аэропортов. Спецификация требований к ПО..docx
QT HW10/: mainwindow.cpp  mainwindow.h  tcpclient.cpp  tcpclient.h
QT HW2/: Readme.md
QT HW4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT HW5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  stopwatch.cpp  stopwatch.h
QT HW6/: CMakeLists.txt  mainwindow.cpp
QT HW7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT HW8/: .gitignore  CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  dbdata.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT HW9/: CMakeLists.txt  UdpWorker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp
SQLCPP HW04/: INSERT.sql
SQLCPP HW05/: CMakeLists.txt  MyClientBase.cpp  MyClientBase.h  main.cpp
UnitTest/: main.cpp
build-QT-HW7-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-QT-HW8-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
(+597 files in other folders)
